# mrp

./: .directory  .gitignore  README.md  consultas.md  cosas-por-mejorar.md  test-mrp.ods
code/: .directory  .gitignore  CMakeLists.txt  Makefile  hc-comparative.ods  servicios.csv~
code/src/: Balance.cpp  Balance.h  Balance.hpp  CMakeLists.txt  Constraints.cpp  Constraints.h  Costs.cpp  Costs.h  Greedy.cpp  Greedy.h  Greedy.hpp  HillClimbing.cpp  HillClimbing.h  HillClimbing.hpp  Instance.cpp  Instance.h  Instance.hpp  LocalSearch.cpp  LocalSearch.hpp  Location.cpp  Location.h  Machine.cpp  Machine.h  Machine.hpp  Neighborhood.cpp  Neighborhood.h  Process.cpp  Process.h  Process.hpp  Resource.cpp  Resource.h  Resource.hpp  Service.cpp  Service.h  Service.hpp  Solution.cpp  Solution.h  Solution.hpp  main.cpp  main_greedy.cpp  (+6 more)
informe/: .gitignore  Makefile  informe2.bib  informe2.tex  informe2.txss
informe/sections/: abstract.tex  algoritmo.tex  conclusiones.tex  definicion_del_problema.tex  estado_del_arte.tex  experimentos.tex  introduccion.tex  modelo_matematico.tex  representacion.tex  resultados.tex
informe/sections/conclusiones/: conclusiones.tex
informe/sections/definicion_del_problema/: definicion_del_problema.tex
informe/sections/estado_del_arte/: estado_del_arte.tex
informe/sections/experimentos/: experimentos.tex  tabla-analisis-servicios.tex
informe/sections/introduccion/: introduccion.tex
informe/sections/modelo_matematico/: modelo_matematico.tex
informe/sections/representacion/: representacion.tex
